<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/apply_Name"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-125dp"
        android:autofillHints=""
        android:hint="Name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/apply_Phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/apply_Phone"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:hint="Phone number"
        android:inputType="phone"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/apply_Email"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_Name" />

    <EditText
        android:id="@+id/apply_Email"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_Phone" />


    <Button
        android:id="@+id/apply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_Email"/>

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_btn"/>

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="293dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:gravity="center"
        android:visibility="visible"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="124dp"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_Email" />


</androidx.constraintlayout.widget.ConstraintLayout>