<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchName"
            android:layout_width="305dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="search by name"
            android:inputType="text"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:text="Search" />
    </LinearLayout>

    <TextView
        android:id="@+id/jobName"
        android:layout_width="393dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        tools:text="Job Name :" />

    <TextView
        android:id="@+id/employeeName"
        android:layout_width="384dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobName"
        tools:text="Employee:" />

    <TextView
        android:id="@+id/employeePhone"
        android:layout_width="384dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeName"
        tools:text="Employee's phone:" />

    <TextView
        android:id="@+id/employeeEmail"
        android:layout_width="384dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeePhone"
        tools:text="Employee's Email:" />

    <TextView
        android:id="@+id/status"
        android:layout_width="384dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeEmail"
        tools:text="Status:" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="31dp"
        android:text="Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeName" />

    <Button
        android:id="@+id/acceptance_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="246dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="6dp"
        android:text="Accept"
        app:layout_constraintBottom_toTopOf="@+id/completion_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeePhone" />

    <Button
        android:id="@+id/completion_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="24dp"
        android:text="Reject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeEmail" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="130dp"
        android:text="Back"
        app:layout_constraintEnd_toStartOf="@+id/completion_btn"
        app:layout_constraintTop_toBottomOf="@+id/employeeEmail" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="293dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:gravity="center"
        android:visibility="visible"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="124dp"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />


</androidx.constraintlayout.widget.ConstraintLayout>