<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Sign_In_Email"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-125dp"
        android:autofillHints=""
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/Sign_In_Password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <EditText
        android:id="@+id/Sign_In_Password"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-125dp"
        android:autofillHints=""
        android:hint="Password"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/Sign_In_Request"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sign_In_Email" />

    <Button
        android:id="@+id/Sign_In_Request"
        android:layout_width="147dp"
        android:layout_height="50dp"
        android:layout_marginTop="370dp"
        android:layout_marginBottom="8dp"
        android:text="Login"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SignUpLink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SignUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="284dp"
        android:text="New User? Sign up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sign_In_Request" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="293dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:gravity="center"
        android:visibility="visible"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="124dp"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpLink" />


</androidx.constraintlayout.widget.ConstraintLayout>

